<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccoutActivity.LoginFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="45sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/purple_700"
        android:layout_marginTop="100dp"
        android:text="@string/title_cinema_ticket" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="75dp"
        android:layout_marginTop="100dp"
        android:hint="@string/username_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="75dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_layout_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/log_in_hint"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="130dp"
        app:icon="@drawable/ic_login"
        app:strokeColor="@color/purple_700"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            android:text="@string/string_no_account" />
        <TextView
            android:id="@+id/signup_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/purple_700"
            android:clickable="true"
            android:text="@string/string_sign_up"
            android:focusable="true" />
    </LinearLayout>


</LinearLayout>