<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RezervationActivity.ConfirmSeatsFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="45sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/purple_700"
        android:layout_marginTop="50dp"
        android:text="@string/confirm_seats_text" />

    <TextView
        android:id="@+id/how_many_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="50dp"
        android:text="@string/confirm_seats_text" />

    <TextView
        android:id="@+id/final_price_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/orange_black"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif"
        android:text="@string/confirm_seats_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="75dp"
        android:layout_marginTop="100dp"
        android:hint="@string/full_name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="75dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_layout_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/terms_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="100dp"
        android:text="@string/i_accept_terms_conditions_text"/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/confirm_button_text"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="130dp"
        app:strokeColor="@color/purple_700"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/please_be_there_30_minutes_earlier_text" />
    </LinearLayout>


</LinearLayout>