<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccoutActivity.SignUpFragment">

    <Button
        android:id="@+id/button_back_to_login"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:icon="@drawable/ic_back_arrow"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="45sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/purple_700"
        android:layout_marginTop="35dp"
        android:text="SignUp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="75dp"
        android:layout_marginTop="100dp"
        android:hint="@string/username_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="75dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_layout_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="75dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_layout_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/repeat_password_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group_signup"
        android:checkedButton="@+id/radio_button_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="160dp">
        <RadioButton
            android:id="@+id/radio_button_client"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/client_hint"
            android:tag="false"
            android:textSize="20sp"
            app:useMaterialThemeColors="true" />
        <RadioButton
            android:id="@+id/radio_button_admin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/admin_hint"
            android:tag="true"
            android:textSize="20sp"
            app:useMaterialThemeColors="true" />
    </RadioGroup>

    <Button
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/sign_up_hint"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="130dp"
        app:icon="@drawable/ic_signup"
        app:strokeColor="@color/purple_700"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>



</LinearLayout>